# seedforge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
heap_profiler/: memmonitoring.2026-05-25T15_30_59.908.739789528.txt  memmonitoring.2026-05-25T15_41_19.936.851656904.txt  memmonitoring.2026-05-25T15_49_19.949.863360976.txt  memprof.2026-05-25T15_30_59.861.739789528.pprof  memprof.2026-05-25T15_31_09.864.768970336.pprof  memprof.2026-05-25T15_31_19.864.798587824.pprof  memprof.2026-05-25T15_41_19.884.851656904.pprof  memprof.2026-05-25T15_49_19.898.863360976.pprof  memstats.2026-05-25T15_25_09.905.883474432.txt  memstats.2026-05-25T15_25_19.904.888422400.txt  memstats.2026-05-25T15_25_29.864.896909312.txt  memstats.2026-05-25T15_25_39.856.899039232.txt  memstats.2026-05-25T15_32_19.875.911687680.txt
seedforge/: __init__.py  ai.py  cli.py  config.py  generators.py  graph.py  heuristics.py  inserter.py  introspector.py
tests/: test_generators.py  test_graph.py  test_heuristics.py
