[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seedforge"
version = "0.4.0"
description = "One command to fill your database with realistic test data. Reads schema, resolves FK, generates smart data — no code needed."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SilkHorizon", email = "hello@silkhorizon.uz"},
]
keywords = ["database", "testing", "faker", "seed", "synthetic-data", "postgresql", "mysql", "sqlite", "test-data", "seeding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "psycopg2-binary>=2.9.0",
    "faker>=25.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mysql = ["pymysql>=1.1.0"]
mssql = ["pymssql>=2.2.0"]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]
groq = ["groq>=0.4.0"]
ai = ["anthropic>=0.40.0", "openai>=1.0.0"]
all = ["pymysql>=1.1.0", "pymssql>=2.2.0", "anthropic>=0.40.0", "openai>=1.0.0"]

[project.scripts]
seedforge = "seedforge.cli:app"

[project.urls]
Homepage = "https://github.com/silkhorizonstudios/seedforge"
Repository = "https://github.com/silkhorizonstudios/seedforge"
"Bug Tracker" = "https://github.com/silkhorizonstudios/seedforge/issues"
PyPI = "https://pypi.org/project/seedforge/"

[tool.setuptools.packages.find]
include = ["seedforge*"]
